--- a/app/Resources/views/agenda.html.twig
+++ b/app/Resources/views/agenda.html.twig
@@ -6,13 +6,13 @@
 {% form_theme form 'bootstrap_4_layout.html.twig' %}
 {% block title %}Agenda{% endblock %}
 {% block body %}    
-<div class="container bg-light">
-    <header class="text-center py-3 my-5">
-        <h1 class="bg-white-semi_transparent"><em class="text-dark"></em>Agenda</h1>
-        <p>Consulter, modifier, imprimer le planning de vos équipes</p>        
+<div class="container bg-light">    
+    <header class="text-center py-3">
+        <h1 class="bg-white-semi_transparent">AGENDA</h4>
+        <p>Consulter, imprimer, votre  planning, ou celui de vos équipes</p>
     </header>
-    <hr>
-      
+    
+    <hr>      
     <div class="bg-white my-3">
         <span class ="d-flex align-items-center justify-content-between">
             <span>
