--- a/app/Resources/views/agent/show.html.twig
+++ b/app/Resources/views/agent/show.html.twig
@@ -8,10 +8,9 @@
 {% block body %}   
     <div class="container bg-light">
         <header class="text-center py-3">
-            <h1 class="bg-white-semi_transparent"><em class="text-dark">Agents </em></h1>
-            <p>Voici la liste des agents</p>
-            <p>{% if is_granted('ROLE_USER') %} je suis agent{%endif%}</p>
-        </header>
+            <h1 class="bg-white-semi_transparent">AGENTS</h4>
+            <p>Consulter, imprimer, modifier le profil des agents</p>
+        </header>        
         <div class="row border border-rounded my-2">
             <div class="col-md-10">
                 <span class="fa-stack fa-1x my-2">
