--- a/app/Resources/views/rule/show.html.twig
+++ b/app/Resources/views/rule/show.html.twig
@@ -8,8 +8,8 @@
 {% block body %}
     <div class="container bg-light">
         <header class="text-center py-3">
-            <h1 class="bg-white-semi_transparent">Contraintes<em class="text-dark"> réglementaires </em></h1>
-            <p>Voici la liste des contraintes réglementaires</p>
+            <h1 class="bg-white-semi_transparent">CONTRAINTES</h4>
+            <p>Voici la liste des contraintes pour être en conformité avec le droit du travail</p>
         </header>
         <div class="row border border-rounded my-2">
             <div class="col-md-10">                
