--- a/app/Resources/views/service/show.html.twig
+++ b/app/Resources/views/service/show.html.twig
@@ -8,8 +8,8 @@
 {% block body %}
     <div class="container bg-light">
         <header class="text-center py-3 mb-4">
-            <h1 class="bg-white-semi_transparent"><em class="text-dark">Service </em></h1>
-            <p>Composition du service</p>
+            <h1 class="bg-white-semi_transparent">SERVICES </h1>
+            <p>Visualisez, éditer, imprimer les services</p>
         </header>
         <div class="row border border-rounded my-2">
             <div class="col-md-10">
