--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,25 +10,26 @@
         <link rel="icon" type="image/x-icon" href="{{ asset('favicon.ico') }}" />
         {% block stylesheets %} {% endblock %}
     </head>
-    <body>        
+    <body>       
         <div class="container">
-            <div class="row d-flex align-items-end my-2">
-                <div class =" col-md-4 ">
+            <div class="row d-flex align-items-end justify-content-between mt-5">
+                <div class="mb-4">
                     <a href="{{ path('home') }}">
                         <img src="{{ asset('/assets/images/EDF-logo.png') }}" width="auto" height="100px"  alt="">						
                     </a>  
                 </div>
-                <div class =" col-md-4 ">
-                    <h1 class="colorTitle">PRHAT</h1>
+                <div>
+                    <h1 class="title-EDF text-center">PRHAT</h1>
+                    <p class="text-center text-blue-edf">Le planning des agents en arrêt de tranche</p>
                 </div>
-                <div class =" col-md-4">
+                <div>
                     <a href="{{ path('home') }}">
                         <img src="{{ asset('/assets/images/logo-site-Saint-Alban.jpg') }}" width="auto" height="100px" alt="">						
                     </a> 
                 </div>
             </div>
             <div class="row align-items-end justify-content-between py-2 rounded" style="background-color: #09357A; min-height: 100px;">
-                <span class="ml-5 text-white">Bonjour, 
+                <span class="ml-5 text-white">
                     {% if  app.user %}
                         {{ app.user.firstname|capitalize }} {{ app.user.username|upper }}                       
                         {% if is_granted('ROLE_ADMIN') %}
