--- a/app/Resources/views/section/show.html.twig
+++ b/app/Resources/views/section/show.html.twig
@@ -8,8 +8,8 @@
 {% block body %}   
     <div class="container bg-light">
         <header class="text-center py-3">
-            <h1 class="bg-white-semi_transparent"><em class="text-dark">Section </em></h1>
-            <p>Voici la liste des sections</p>
+            <h1 class="bg-white-semi_transparent">SECTION</h1>
+            <p>Visualisez, éditer, modifier, les sections</p>
         </header>
         <div class="row border border-rounded my-2">
             <div class="col-md-10">
