--- a/app/Resources/views/team/show.html.twig
+++ b/app/Resources/views/team/show.html.twig
@@ -8,8 +8,8 @@
 {% block body %}   
     <div class="container bg-light">
         <header class="text-center py-3">
-            <h1 class="bg-white-semi_transparent"><em class="text-dark">Equipes </em></h1>
-            <p>Voici la liste des équipes</p>
+            <h1 class="bg-white-semi_transparent">EQUIPES</h1>
+            <p>Visualisez, editez, imprimez les équipes</p>
         </header>
         <div class="row border border-rounded my-2">
             <div class="col-md-10">
