--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -6,11 +6,9 @@
 
 {% block body %}    
     <header class="text-center py-3">
-            <h1 class="bg-white-semi_transparent"><em class="text-dark">Bienvenue sur </em>PRHAT</h1>
+            <h1 class="bg-white-semi_transparent">BIENVENUE SUR PRHAT</h1>
             <p>La nouvelle application de saisie du planning des agents, pour les arrêts de tranche.</p>
-    </header>
-                  
-                  
+    </header>   
     <div class="my-2">
         <div class="container homeCards">
             <div class= "row">
