--- a/app/Resources/views/team/showAgents.html.twig
+++ b/app/Resources/views/team/showAgents.html.twig
@@ -8,7 +8,7 @@
 {% block body %}   
     <div class="container">       
         <header class="text-center py-3">
-            <h1 class="bg-white-semi_transparent"><em class="text-dark">Equipe {{team.name }} </em></h1>
+            <h1 class="bg-white-semi_transparent">EQUIPE {{team.name|upper }}</h1>
             <p>Voici la composition de l'équipe</p>
         </header>
         <div class="row border border-rounded my-2">
