--- a/app/Resources/views/agendaTemp.html.twig
+++ b/app/Resources/views/agendaTemp.html.twig
@@ -14,14 +14,11 @@
     <div class="bg-white my-3">
         <span class ="d-flex align-items-center justify-content-between">
             <span>
-                <button class="btn btn-outline-dark" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">
-                    <span><i class="fas fa-search"></i></span><span> </span>
-                </button>
                 {% if team %}
-                <a class="btn btn-outline-dark" href="{{ path('showPreviousAgenda', {'team_Id': team.id, 'previousDate': startDate|date("Y-m-d")}) }}">                                        
+                {#<a class="btn btn-outline-dark" href="{{ path('showNextAgendaTemp', {'team_Id': team.id, 'previousDate': startDate|date("Y-m-d")}) }}">                                        
                     <span><i class="fas fa-step-backward"></i></span> -15 j <span> </span>
-                </a>
-                <a class="btn btn-outline-dark" href="{{ path('showNextAgenda', {'team_Id': team.id, 'nextDate': endDate|date("Y-m-d")}) }}">                                        
+                </a>#}
+                <a class="btn btn-outline-dark" href="{{ path('showNextAgendaTemp', {'team_Id': team.id, 'nextDate': endDate|date("Y-m-d")}) }}">                                        
                     <span><i class="fas fa-step-forward"></i></span>+ 15 J <span> </span>
                 </a>
                 {% endif %}
