--- a/web/assets/css/styles.css
+++ b/web/assets/css/styles.css
@@ -6,7 +6,7 @@ footer {
     width:100%;
 }
 
-h1, h2, h3, h4, h5 {
+h1, h2, h3 {
     color: #09357A;
     font-weight: bold;
 }
@@ -160,6 +160,12 @@ h1, h2, h3, h4, h5 {
 
 .text-blue-edf {
     color: #09357A;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
 
