--- a/app/Resources/views/agent/show.html.twig
+++ b/app/Resources/views/agent/show.html.twig
@@ -34,7 +34,7 @@
                             <th>Prénom</th>                            
                             <th>Fonction</th>
                             <th>Equipe</th>
-                            <th>Roles</th>
+                            <th>Role</th>
                             <th>Modifier</th>
                             <th>Supprimer</th>
                             <th>Historique des modifications</th>
@@ -58,9 +58,16 @@
                                     {% endif %}
                                 </td>
                                 <td>
-                                    {% for role in agent.roles %}
-                                        <table><tr><td>{{ role }}</td></tr></table>
-                                    {% endfor %}
+                                {% if  agent.roles|length == 1  %}
+                                    Agent
+                                {% else %}
+                                    {% if  (agent.roles.0 == 'ROLE_ADMIN') %}
+                                        Administrateur
+                                    {% else %}
+                                        Valideur
+                                    {% endif %}
+                                    
+                                {% endif %}
                                 </td>  
                                 <td><a href="{{ path('editAgent', { 'id': agent.id }) }}"><i class="fas fa-edit"></i></a></td>
                                 <td><a href="{{ path('deleteAgent', { 'id': agent.id }) }}"><i class="fas fa-trash-alt"></i></a></td>
