--- a/app/Resources/views/agendaTemp.html.twig
+++ b/app/Resources/views/agendaTemp.html.twig
@@ -117,7 +117,7 @@
     
     <div class="row border border-rounded my-2">
         <div class="col-md-12">        
-            <h4 id="titre"></h4>              
+            <h3 class="my-2 mx-2" id="titre"></h3>
             <p><ul class="list-group list-group-flush" id="description"></ul></p>
         </div>
     </div>    
