--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -21,6 +21,7 @@
                 <div>
                     <h1 class="title-EDF text-center">PRHAT</h1>
                     <p class="text-center text-blue-edf">Le planning des agents en arrêt de tranche</p>
+                    <p></p>
                 </div>
                 <div>
                     <a href="{{ path('home') }}">
@@ -34,13 +35,16 @@
                         {{ app.user.firstname|capitalize }} {{ app.user.username|upper }}
                         {% if  app.user.team %}  | Equipe :  {{   app.user.team.name|upper }}{% endif %}
                         {% if is_granted('ROLE_ADMIN') %}
-                            | Rôle : ADMINISTRATEUR  
+                            | Rôle : ADMINISTRATEUR  |
                         {% elseif is_granted('ROLE_VALIDEUR') %}
-                            | Rôle :  VALIDEUR   <a class="badge badge-danger ml-2 px-2" href="{{ path('showAgendaTeam') }}">Agendas en attente </a>
+                            | Rôle :  VALIDEUR |
                         {% else %}
-                            | Rôle : AGENT
+                            | Rôle : AGENT |
                         {% endif %}
-                    {% endif %}                   
+                    {% endif %}
+                    {% if (user_management.countWaitedValidation( app.user)) %}
+                        <a class=" ml-2 px-2" href="{{ path('showAgendaTeam') }}"> <span class="text-white">Agendas en attente de validation : </span><span class="badge badge-danger">{{ user_management.countWaitedValidation( app.user) }}</span> </a>
+                    {% endif %}
                 </span>
                 <span class="mr-2 text-white">
                     {% if  app.user %}
