--- a/app/Resources/views/agenda.html.twig
+++ b/app/Resources/views/agenda.html.twig
@@ -37,8 +37,25 @@
     <div class="col-md-8 offset-2 text-center collapse" id="collapseExample">
         <form action="{{ path('showAgenda') }}" method="post" class="form-control mb-2 bg-menu shadow-lg" >
         {{ form_start(form) }}
-        {{ form_row(form.Team, {'label': 'Equipe', 'attr' : {'placeholder':'Selectionnez une équipe ...' }}) }}
-        {{ form_row(form.interval, {'label': 'Equipe', 'attr' : {'placeholder':'Selectionnez une équipe ...' }}) }}
+
+        <h3 class="my-5"> <span><i class="fas fa-search"></i></span><span> Parcourir un agenda</span></h3>
+
+        <div class="mb-2 d-flex align-items-center justify-content-around ">
+            {{ form_row(form.Team, {'label': ' ', 'attr' : {'placeholder':'Choisir une équipe ...' }}) }}
+        {##"{{ form_row(form.interval, {'label': 'Période', 'attr' : {'placeholder':'Selectionnez une équipe ...' }}) }}#}
+        </div>
+        <div class="mb-2 d-flex align-items-center justify-content-around bg-white rounded">
+            {{ form_row(form.interval, {'label': 'Choisir une durée<', 'attr' : {'class':'form-check form-check-inline', 'type':'radio' }}) }}
+        </div>
+        <div class="mt-5 d-flex align-items-center justify-content-around ">
+            <span>{{ form_row(form.Envoyer)}}</span>
+        </div>
+        <div class="d-flex align-items-center justify-content-end mr-1">
+            <span data-toggle="collapse" data-target="#collapseExample" ><i class="fas fa-angle-up fa-3x"></i></span>
+        </div>
+
+
+        {{ form_rest(form) }}
         {{ form_rest(form) }}
         {{ form_end(form) }}
         </form>
