--- a/app/Resources/views/agenda.html.twig
+++ b/app/Resources/views/agenda.html.twig
@@ -35,7 +35,7 @@
 </div>
 <div class="container bg-light">    
     <div class="col-md-8 offset-2 text-center collapse" id="collapseExample">
-        <form action="{{ path('showAgenda') }}" method="post" class="form-control mb-2 bg-menu shadow-lg" >
+        <form action="{{ path('showAgenda') }}" method="post" class="form-control my-5 bg-menu shadow-lg" >
         {{ form_start(form) }}
 
         <h3 class="my-5"> <span><i class="fas fa-search"></i></span><span> Parcourir un agenda</span></h3>
