--- a/app/Resources/views/letter/show.html.twig
+++ b/app/Resources/views/letter/show.html.twig
@@ -14,7 +14,7 @@
         <div class="row border border-rounded my-2">
             <div class="col-md-10">
                 <span class="fa-stack fa-1x my-2">
-                    <i class="fas fa-circle fa-stack-2x text-primary"></i>
+                    <i class="fas fa-circle fa-stack-2x text-dark"></i>
                     <a href="{{ path('createLetter') }}"><i class="fas fa-plus fa-stack-1x fa-inverse text-white"></i></a>
                 </span>
                 <span id="buttonPrint">
