--- a/app/Resources/views/agendaTemp.html.twig
+++ b/app/Resources/views/agendaTemp.html.twig
@@ -96,7 +96,7 @@
                         </th> 
                     </tr>
                     <tr class="bg-muted">
-                        <th scope ="col" class="text-color-blue">Valider</th>
+                        <th scope ="col" class="text-color-blue">Transmettre</th>
                         <th scope ="col" class="text-color-blue">Supprimer</th>
                         <th scope ="col" class="text-color-blue">Id</th>
                         <th scope ="col" class="text-color-blue">Nom</th>
@@ -113,7 +113,7 @@
                         {% for agentRow in agentBetweens %}
                             <tr>
                             {% for AgentIdentification in agentRow.0 %}
-                                <td><a class="btn btn-success btn-sm" href="{{ path('validTemp', {'id': AgentIdentification.0}) }}"><i class="fas fa-check"></i> </a></td>
+                                <td><a class="btn btn-success btn-sm" href="{{ path('sendhistoryModif', {'id': AgentIdentification.0}) }}"><i class="fas fa-check"></i> </a></td>
                                 <td><a class="btn btn-danger btn-sm" href="{{ path('deleteTemp', {'id': AgentIdentification.0}) }}"><i class="fa fa-trash"></i></a></td>                                                               
                                 {% for AgentIdentificationDetail in AgentIdentification %} 
                                     <td>{{ AgentIdentificationDetail }}</td>
