--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -78,7 +78,7 @@
                                 <a class="nav-link" href="{{ path('showteam') }}">Equipes</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="{{ path('showletter') }}">Codes</a>
+                                <a class="nav-link" href="{{ path('showletter') }}">Horaires</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ path('showSection') }}">Section</a>
