--- a/app/Resources/views/service/show.html.twig
+++ b/app/Resources/views/service/show.html.twig
@@ -1,7 +1,9 @@
 {% extends 'base.html.twig' %}
 
 {% block stylesheets %}
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/sl-1.2.6/datatables.min.css"/>
+   {#<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-colvis-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/cr-1.5.0/fc-3.2.5/fh-3.1.4/kt-2.5.0/r-2.2.2/rg-1.1.0/rr-1.2.4/sc-1.5.0/sl-1.2.6/datatables.css"/>#}
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/jq-3.3.1/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-colvis-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/cr-1.5.0/fc-3.2.5/fh-3.1.4/kt-2.5.0/r-2.2.2/rg-1.1.0/rr-1.2.4/sc-1.5.0/sl-1.2.6/datatables.css"/>
+ 
 {% endblock %}
 {% block title %}Service{% endblock %}
 
@@ -32,6 +34,12 @@
                             <th>Code arrêt</th>
                             <th></th>
                             <th></th>
+                            <th>test</th>
+                            <th>test</th>
+                            <th>test</th>
+                            <th>test</th>
+                            <th>test</th>
+                            <th>test</th>
                         </tr>
                     </thead>                    
                     <tbody> 
@@ -43,6 +51,12 @@
                                 <td class="editFor">{{ service.event.code }}</td>                               
                                 <td><a href="{{ path('editService', { 'id': service.id }) }}"><i class="fas fa-edit"></i></a></td>
                                 <td><a href="{{ path('deleteService', { 'id': service.id }) }}"><i class="fas fa-trash-alt"></i></a></td>
+                                <td>{{ service.id }}</td>
+                                <td>{{ service.id }}</td>
+                                <td>{{ service.id }}</td>
+                                <td>{{ service.id }}</td>
+                                <td>{{ service.id }}</td>
+                                <td>{{ service.id }}</td>
                             </tr>
                         {% endfor %}
                     </tbody>
@@ -54,10 +68,9 @@
 
 
 {% block javascripts %}
-<script src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
-<script type="text/javascript" src="https://cdn.datatables.net/v/bs4/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/sl-1.2.6/datatables.min.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/v/dt/jq-3.3.1/jszip-2.5.0/dt-1.10.18/af-2.3.2/b-1.5.4/b-colvis-1.5.4/b-flash-1.5.4/b-html5-1.5.4/b-print-1.5.4/cr-1.5.0/fc-3.2.5/fh-3.1.4/kt-2.5.0/r-2.2.2/rg-1.1.0/rr-1.2.4/sc-1.5.0/sl-1.2.6/datatables.js"></script>
 <script type="text/javascript" src="/assets/js/datatable/configService.js"></script>
 
 
